--- a/.config/i3/config
+++ b/.config/i3/config
@@ -40,6 +40,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
+exec --no-startup-id blueman-applet
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -232,7 +233,7 @@ bindsym XF86AudioPrev exec playerctl previous
 bindsym Print exec sh ~/.config/i3/screenshot.sh 
 
 # Firefox
-bindsym $mod+F5 exec firefox
+bindsym $mod+F5 exec google-chrome 
 
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
