--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -454,7 +454,7 @@ map gd cd ~/dev
 map gD cd ~/delta
 map gl cd -r .
 map gL cd -r %f
-map go cd /opt
+eap go cd /opt
 map gv cd /var
 map gM cd /mnt/movies
 map go cd /mnt/others
