--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -54,7 +54,8 @@
 # Rarely installed browsers get higher priority; It is assumed that if you
 # install a rare browser, you probably use it.  Firefox/konqueror/w3m on the
 # other hand are often only installed as fallback browsers.
-ext x?html?, has firefox,             X, flag f = firefox "$1"
+
+ext x?html?, has google-chrome,    X, flag f = google-chrome -- "$@"
 ext x?html?, has vimprobable,      X, flag f = vimprobable -- "$@"
 ext x?html?, has vimprobable2,     X, flag f = vimprobable2 -- "$@"
 ext x?html?, has qutebrowser,      X, flag f = qutebrowser -- "$@"
@@ -72,7 +73,7 @@ ext x?html?, has seamonkey,        X, flag f = seamonkey -- "$@"
 ext x?html?, has iceweasel,        X, flag f = iceweasel -- "$@"
 ext x?html?, has chromium-browser, X, flag f = chromium-browser -- "$@"
 ext x?html?, has chromium,         X, flag f = chromium -- "$@"
-ext x?html?, has google-chrome,    X, flag f = google-chrome -- "$@"
+ext x?html?, has firefox,             X, flag f = firefox "$1"
 ext x?html?, has epiphany,         X, flag f = epiphany -- "$@"
 ext x?html?, has konqueror,        X, flag f = konqueror -- "$@"
 ext x?html?, has elinks,            terminal = elinks "$@"
@@ -140,7 +141,7 @@ mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 #-------------------------------------------
 # Documents
 #-------------------------------------------
-ext pdf, has firefox,     X, flag f = firefox "$@"
+ext pef, has google-chrome, X flag f = google-chrome -- "$@"
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
 ext pdf, has mupdf,    X, flag f = mupdf "$@"
 ext pdf, has mupdf-x11,X, flag f = mupdf-x11 "$@"
